<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_subject_calender"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@color/gray"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/atschool_text"
                android:textColor="@color/black_color"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/image_activityDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
               
               
                android:visibility="gone" />

            <TextView
                android:id="@+id/text_subjectname"
                android:layout_width="match_parent"
                android:layout_height="35dip"
                android:layout_marginTop="1dp"
                android:layout_below="@id/text_subject_calender"
                android:background="@color/gray"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text=""
                android:textColor="@color/black_color"
                android:textSize="15sp" />

            <RelativeLayout
                android:id="@+id/layout_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/text_subjectname"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="18dip" >

                <TextView
                    android:id="@+id/text_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/text_sunday"
                    android:text="@string/monday"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/text_monday"
                    android:text="@string/tuesday"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/text_tuesday"
                    android:text="@string/wednesday"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/text_wednesday"
                    android:text="@string/thursday"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/text_thursday"
                    android:text="@string/friday"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/text_friday"
                    android:text="@string/saturday"
                    android:textColor="@color/gray"
                    android:textSize="18sp" />
            </RelativeLayout>

            <View
                android:id="@+id/line_belowday"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/layout_days"
                android:layout_marginTop="10dip"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/layout_dayAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/line_belowday"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/text_weekday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weekDay_text"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_weekend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/text_weekday"
                    android:text="@string/weekEnd_text"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_alldays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/text_weekend"
                    android:text="@string/allDay_text"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />
            </RelativeLayout>

            <View
                android:id="@+id/line_belowdayall"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/layout_dayAll"
                android:layout_marginTop="10dip"
                android:background="@color/gray" />

            <RelativeLayout
                android:id="@+id/layout_examdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/line_belowdayall"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/image_examdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:src="@drawable/examdate_icon" />

                <TextView
                    android:id="@+id/text_examdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_toRightOf="@id/image_examdate"
                    android:text="@string/examdate_text"
                    android:textColor="@color/black_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    android:focusable="false"
                    android:singleLine="true"
                    android:textColor="@color/black_color"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/text_note"
                android:layout_width="match_parent"
                android:layout_height="35dip"
                android:layout_below="@id/layout_examdate"
                android:layout_marginTop="10dip"
                android:background="@color/gray"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:text="@string/note_text"
                android:textColor="@color/black_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/text_typeNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_note"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:hint="Type Note Here..." 
                android:textSize="18sp"/>

            <Button
                android:id="@+id/button_pickSeller"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_below="@id/text_typeNote"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="60dip"
                android:background="@drawable/rectangular_btn"
                android:text="@string/done_text"
                android:textColor="@color/black_color"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_deleteSchool"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_below="@id/button_pickSeller"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="15dip"
                android:background="@drawable/rectangular_btn_redcolor"
                android:text="@string/delete_text"
                android:textColor="@color/font_red_color"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/text_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_deleteSchool"
                android:layout_marginTop="10dip" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>